--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,5 +3,60 @@
   width: 100%;
   max-height: 1000px;
   background-attachment: fixed;
-  background-position: center;
+  opacity: 0.9;
+}
+p{
+  margin-bottom: 5px;
+}
+.container-fluid{
+  overflow: hidden;
+}
+
+.btn{
+  background-color: #FFBD59;
+  color: white;
+  
+}
+
+.top-translate{
+  transform: translate(0px,-220px);
+}
+
+.responsive-text {
+  color: whitesmoke;
+  position: sticky;
+  font-size: 3vw;
+  padding-bottom: 0;
+  text-shadow: 2px 1px 4px rgba(0, 0, 0, 0.3);
+}
+
+
+.responsive-text2 {
+  color: whitesmoke;
+  position: sticky;
+  font-size: 2.5vw;
+  text-shadow: 2px 1px 4px rgba(0, 0, 0, 0.3);
+}
+
+.part-div{
+  margin-top: -9.5vw;
+}
+
+
+.part-div hr{
+  height: 2px;
+  width: relative;
+}
+
+.card-img{
+  max-width: 500px;
+}
+
+@media screen and (max-width: 600px) {
+  .top-translate{
+    transform: translate(0px,-120px);
+  }
+  .part-div{
+    margin-top: -100vw;
+  }
 }
