--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,9 +2,31 @@
   object-fit: cover;
   width: 100%;
   max-height: 1000px;
-  background-attachment: fixed;
   opacity: 0.9;
 }
+
+.header {
+  max-height: 650px;
+}
+
+.centered-content{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  color: white; 
+  z-index: 1;
+}
+
+.image-container{
+  position: relative;
+  overflow: hidden;
+  box-shadow: 1px -1px 21px 20px rgba(0,0,0,0.75) inset;
+  -webkit-box-shadow: 1px -1px 21px 20px rgba(0,0,0,0.75) inset;
+  -moz-box-shadow: 1px -1px 21px 20px rgba(0,0,0,0.75) inset;
+}
+
 p{
   margin-bottom: 5px;
 }
@@ -15,36 +37,37 @@ p{
 .btn{
   background-color: #FFBD59;
   color: white;
+}
+
+.link{
+  width: fit-content;
+  font-size: clamp(12px,1.5vw,36px); 
+}
+
+.link:hover{
+  text-decoration: none;
+  color: black;
+  }
+
+  .responsive-text {
+    color: whitesmoke;
+    font-size: clamp(18px,2vw + 1rem,100px); 
+    padding-bottom: 0;
+    text-shadow: 2px 1px 4px rgba(0, 0, 0, 0.3);
+    text-wrap: nowrap;
+  }
   
-}
-
-.top-translate{
-  transform: translate(0px,-220px);
-}
-
-.responsive-text {
-  color: whitesmoke;
-  position: sticky;
-  font-size: 3vw;
-  padding-bottom: 0;
-  text-shadow: 2px 1px 4px rgba(0, 0, 0, 0.3);
-}
+  
+  .responsive-text2 {
+    color: whitesmoke;
+    font-size: clamp(12px,1.7vw + .5rem,100px); 
+    text-shadow: 2px 1px 4px rgba(0, 0, 0, 0.3);
+    text-wrap: nowrap;
+  }
 
 
-.responsive-text2 {
-  color: whitesmoke;
-  position: sticky;
-  font-size: 2.5vw;
-  text-shadow: 2px 1px 4px rgba(0, 0, 0, 0.3);
-}
-
-.part-div{
-  margin-top: -9.5vw;
-}
-
-
-.part-div hr{
-  height: 2px;
+hr{
+  max-height: 2px;
   width: relative;
 }
 
@@ -52,11 +75,37 @@ p{
   max-width: 500px;
 }
 
-@media screen and (max-width: 600px) {
-  .top-translate{
-    transform: translate(0px,-120px);
-  }
-  .part-div{
-    margin-top: -100vw;
-  }
+.row-header{
+  max-height: 100px;
 }
+
+.description-card{
+  background-color: #fee481;
+  color: black;
+  border:none;
+
+}
+
+.description-button{
+  width: auto;
+}
+
+
+@media (max-width: 1024px) {
+  .header{
+   max-height: 475px;
+  }
+ }
+
+
+@media (max-width: 768px) {
+ .header{
+  max-height: 350px;
+ }
+}
+
+@media (max-width: 425px) {
+  .header{
+   max-height: 200px;
+  }
+ }
