--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -27,17 +27,18 @@ hr{
     min-height: 100vh;
     color:white;
     overflow: hidden;
-
 }
+
 
 .left-panel img{
     position: relative;
     bottom:0;
-    height: auto;
     max-width: 200%;
-    transform: translateY(100px);
+}
 
-    
+.logo{
+    width: 150px;
+    height: 300px;
 }
 
 @media (max-width: 768px) {
