Added Status for Applications

--- a/src/components/AdminRequestModal/AdminRequestModal.css
+++ b/src/components/AdminRequestModal/AdminRequestModal.css
@@ -13,3 +13,9 @@
 .request-modal-body .table td {
   white-space: nowrap;
 }
+
+.check-link{
+  color: blue;
+  text-decoration: underline;
+  text-decoration-color: blue;
+}
