Added Login And Register E

--- a/src/pages/AccountInformation.css
+++ b/src/pages/AccountInformation.css
@@ -1,6 +1,5 @@
-.body-bg{
-    background-color: rgba(255, 224, 178, 0.7);
-    background: url(https://lh3.googleusercontent.com/drive-viewer/AK7aPaAwawYwtKsWpNRc8Kpg5_A8B6BIDyYrHGW2LU2ckkdadKR_lPGzzsrMgoNbOHJoHkiwj5AkSpzscEkAbXDUYV_w4gFmxQ=s1600) center center/cover no-repeat;
+.bg-body{
+    background-color: black;
     min-height: 92.5vh;
     overflow: hidden;
 }
